Tic Tac Toe initial commit, broken game fml

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
     <head>
       <title>Example</title>
+
       <meta name="viewport" content="width=device-width, initial-scale=1">
 
       <!-- Do not add `link` tags-->
@@ -10,8 +11,55 @@
       <!-- Do not add `script` tags-->
       <script src="public/vendor.js" type="text/javascript" charset="utf-8" defer></script>
       <script src="public/application.js" type="text/javascript" charset="utf-8" defer></script>
+
     </head>
     <body>
-      <h1>Browser Template</h1>
-    </body>
+<h3>j233jk</h3>
+
+      <h1>TIC TAC TOE</h1>
+
+      <table id="board">
+      <tr>
+      <td class="tile" data-a=0 data-b=0></td>
+      <td class="tile" data-a=0 data-b=1></td>
+      <td class="tile" data-a=0 data-b=2></td>
+        </tr>
+      <tr>
+      <td class="tile" data-a=1 data-b=0></td>
+      <td class="tile" data-a=1 data-b=1></td>
+      <td class="tile" data-a=1 data-b=2></td>
+        </tr>
+      <tr>
+      <td class="tile" data-a=2 data-b=0></td>
+      <td class="tile" data-a=2 data-b=1></td>
+      <td class="tile" data-a=2 data-b=2></td>
+        </tr>
+      </table>
+
+
+      <!-- <div class="grid">
+          <div class="row">
+              <div class="box"><div class="inner"></div></div>
+              <div class="box"><div class="inner"></div></div>
+              <div class="box"><div class="inner"></div></div>
+
+          </div>
+          <div class="row">
+              <div class="box"><div class="inner"></div></div>
+              <div class="box"><div class="inner"></div></div>
+              <div class="box"><div class="inner"></div></div>
+
+          </div>
+          <div class="row">
+              <div class="box"><div class="inner"></div></div>
+              <div class="box"><div class="inner"></div></div>
+              <div class="box"><div class="inner"></div></div>
+
+          </div>
+      </div> -->
+
+
+
+
+        </body>
 </html>
